<resources>
    <string name="app_name">NJMS</string>
    <string name="deeplink_redirect_scheme">testlib</string>
    <string name="deeplink_redirect_host">vimeonetworktestlib.com</string>
    <string name="request_staff_picks_first_page_with_gson">Request Staff Picks First Page with Gson</string>
    <string name="request_staff_picks_first_page_with_moshi">Request Staff Picks First Page with Moshi</string>
    <string name="login_with_code_grant_through_web">Login With Code Grant (Through Web)</string>
    <string name="check_current_user_account_type">Check Current User Account Type</string>
    <string name="logout">Logout</string>
    <string name="this_is_where_request_output_will_go">This is where request output will go.</string>
    <string name="request_time" formatted="false">Time - %s : %2d</string>
    <string name="gson_or_moshi_request_time_will_show_here_once_complete">Gson or Moshi request time will show here once complete.</string>
    <string name="school_student">School/Student</string>
    <string name="kasia">KASIA</string>
    <string name="anandnagar">ANANDNAGAR</string>
    <string name="nj_international">NJ INTERNATIONAL</string>
    <string name="deoria">DEORIA</string>
    <string name="all">All</string>
    <string name="student">Student</string>
    <string name="select_a_school">Select a school</string>
    <string name="name">Name</string>
    <string name="studentname">studentname</string>
    <string name="post">post</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="no_task_added">No Task Added</string>
    <string name="daily_task">Daily Task</string>
    <string name="date">Date</string>
    <string name="instructions">INSTRUCTIONS</string>
</resources>
